# OberonsCompiler

./: CMakeLists.txt  Makefile  code.txt  main.c  makefile  test.c
Modules/: A_Parser.c  B_LeksAnalyzer.c  B_LexAnalyzer.c  B_LexAnalyzer.h  C_SyntaxAnalyzer.c  C_SyntaxAnalyzer.h  CodeGenerator.c  CodeGenerator.h  G_CodeGenerator.c  G_CodeGenerator.h  LexAnalyzer.c  LexAnalyzer.h  RISC.c  RISC.h  R_RISC.c  R_RISC.h  SyntaxAnalyzer.c  SyntaxAnalyzer.h  X_DeclaredVariables.c  X_TerminalSymbols.c  Y_TerminalSymbols.c  Z_SimpleFunctions.c  Z_Structs.c  Z_Tokens.c
Modules/SimpleFunctions/: SimpleFunctions.c  SimpleFunctions.h
Modules/Structures/: A_Tokens.c  A_Tokens.h  A_Tokens_And_DV.c  A_Tokens_And_DV.h  B_TerminalSymbols.c  B_TerminalSymbols.h  C_DeclaredVariables.c  C_DeclaredVariables.h  C_Expresion.c  C_Expresion.h  D_Statement.c  D_Statement.h  LongList.c  LongList.h  Node.c  Node.h  Object.c  Object.h  Set.c  Set.h  TerminalSymbols.c  TerminalSymbols.h  Tokens.c  Tokens.h
Notes/: OberonsSyntax.txt  Quastions.txt
Programms/Oberon/: Arrays  ConditionalsSimple  Loops  Records  SyntaxError_1
Programms/Output/: Arrays.txt  ConditionalsSimple.txt  Loops.txt  Records.txt
Programms/RiscCode/: 1_SimpleProgram.txt  Conditionals.txt  Records.txt
Programms/RiscCodeD/: 1_SimpleProgram.txt
Programms/RiscCodeHex/: Arrays.txt  Conditionals.txt  Loops.txt  Records.txt
Programms/RiscCodeWithComments/: 1_SimpleProgram.txt  Arrays.txt  Records.txt
Programms/RiscoCodeWithComments/: 1_SimpleProgram.txt  Arrays.txt  ConditionalsSimple.txt  Records.txt
Programs/Oberon/: 1_SimpleProgram  ArrayInRecord  DoubleNesting  FixedPoint  LogicalOperation  Overflow  PassingByLink  Records  Records.txt  WhileIf
Programs/Output/: Conditionals  FixedPoint  Overflow  PassingByLink  Records  SyntaxError_1
Programs/RISCCode/: 1_SimpleProgram  ArrayInRecord  Arrays.txt  Conditionals  ConditionalsSimple  ConditionalsSimple.txt  DoubleNesting  FixedPoint  Loops  Overflow  PassingByLink  Records  SyntaxError_1  WhileIf
Programs/RISCCodeHex/: 1_SimpleProgram  ArrayInRecord  Arrays  Conditionals  ConditionalsSimple  ConditionalsSimple.txt  FixedPoint  LogicalOperation  Loops  Overflow  PassingByLink  Records  SyntaxError_1  WhileIf
Programs/RISCCodeWithComments/: ArrayInRecord  Loops.txt  Records.txt
Tests/CompilerTests/: 1_Test.txt  2_Test.txt
Tests/ProgrammsOnOberon/: 0_Test.txt  1_Test.txt  2_Test.txt  3_Test.txt  4_Test.txt
Tests/SamplePrograms/: 1_TestWithCommentaries.txt  2_Test.txt  3_AllTerminalSymbols.txt  ArrayInRecord  Arrays  Conditionals  Records  SyntaxError_1  Trigonometry
Tests/TestForSimpleFucntions/: T_SimpleFunctions.c
Tests/TestsForModules/: C_SyntaxAnalyzer.c  T_A_Parser.c  T_B_LexAnalyzer.c  T_B_LexAnalyzer.h  T_C_SyntaxAnalyzer.c  T_D_EncodingAndDecoding.c  T_D_EncodingAndDecoding.h  T_R_RISC.c  T_Z_CodeGenerationAndExecuting.c  T_Z_CodeGenerationAndExecuting.h
Tests/TestsForModules/T_A_Parser/: 1_Test.txt  2_Test.txt  T_A_Parser.c
Tests/TestsForModules/T_B_LeksAnalyzer/: T_B_LeksAnalyzer.c  T_B_LexAnalyzer.c
Tests/TestsForModules/T_B_LeksAnalyzer.c/: T_B_LeksAnalyzer.c
Tests/TestsForModules/T_Z_Tokens/: T_Z_Tokens.c
Tests/TestsForStructures/: T_Set.c  T_Tokens.c
Tests/TestsForStructures/T_A_Tokens/: T_Tokens.c
Tests/TestsForStructures/T_A_Tokens_and_DV/: T_DeclaredVariables.c
Tests/TestsForStructures/T_C_DeclaredVariables/: T_DeclaredVariables.c
